...

	const [websiteVisible, openWebsite, closeWebsite] = useToogleState(false);

	return (
		<>
			<ConfiguredScrollView
				testID="movieDetails.scrollView"
				scrollEventThrottle={16}
				onScroll={onScroll}
			>
				{!data ? (
					<ContainerCenter>
						<Spinner paddingAreaSize={150} />
...
