...
	);

	const settingsTabOptions = useMemo(
		() => ({
			tabBarIcon: (props: ITabBarIconProps) => <Icon {...props} name="settings" />,
			tabBarLabel: translate('tabs.settings'),
			tabBarTestID: 'tabbar.settings',
		}),
		[],
	);

	const profileTabOptions = useMemo(
		() => ({
			tabBarIcon: (props: ITabBarIconProps) => <Icon {...props} name="account-circle" />,
			tabBarLabel: translate('tabs.profile'),
			tabBarTestID: 'tabbar.profile',
		}),
		[],
	);

	return (
		<NavigationContainer linking={linking} ref={NavigationService.setNavigation}>
...
